Added Sample JSON for conf

--- a/src/conf/MacroKeys.conf
+++ b/src/conf/MacroKeys.conf
@@ -1,4 +1,26 @@
 {
-    "width": 1024,
-    "height": 768
+    "profiles" :
+    [
+        {
+            "profle_name": "Profile 1",
+            "profile_id": 0,
+            "actions":
+            [
+                {
+                    "id": 0,
+                    "name": "Action 1",
+                    "type": "Key_Presses",
+                    "keys":["Super", "'steam'", "return"],
+                    "anim_speed": 0.1
+                },
+                {
+                    "id": 1,
+                    "name": "Action 2",
+                    "type": "Key_Presses",
+                    "keys":["Super", "'slack'", "return"],
+                    "anim_speed": 0.1
+                }
+            ]
+        }
+    ]
 }
