--- a/src/conf/MacroKeys.conf
+++ b/src/conf/MacroKeys.conf
@@ -1,4 +1,5 @@
 {
+    "keyboard_name":"SEM USB Keyboard"
     "profiles" :
     [
         {
@@ -9,6 +10,7 @@
                 {
                     "id": 0,
                     "name": "Action 1",
+                    "key_bind":"KEY_KP0",
                     "type": "Key_Presses",
                     "keys":["Super", "'steam'", "return"],
                     "anim_speed": 0.1
@@ -16,6 +18,7 @@
                 {
                     "id": 1,
                     "name": "Action 2",
+                    "key_bind":"KEY_KP1",
                     "type": "Key_Presses",
                     "keys":["Super", "'slack'", "return"],
                     "anim_speed": 0.1
