--- a/src/conf/MacroKeys.conf
+++ b/src/conf/MacroKeys.conf
@@ -1,3 +1,4 @@
+# This is a sample. The Actual configuration is created in the /etc/MacroKeys/ folder with the file name MacroKeys.conf
 {
     "keyboard_name":"SEM USB Keyboard"
     "profiles" :
